testing/tests/ui/macro-super.stderr
error: 'super' is not a valid name for a macro
 --> <source attribute>:1:3
  |
       1 | {%- macro super() -%}{%- endmacro -%}
         |   ^ close to this token
         |
 --> tests/ui/macro-super.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
